--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.firebase.firebase-crash'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "26.0.1"
 
     defaultConfig {
         applicationId "com.jacobgb24.launchschedule"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 19
-        versionName "3.2.3"
+        versionCode 20
+        versionName "3.3"
     }
     buildTypes {
         release {
@@ -20,13 +21,13 @@ android {
 }
 
 dependencies {
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:support-v13:25.2.0'
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:recyclerview-v7:25.2.0'
-    compile 'com.android.support:design:25.2.0'
-    compile 'com.android.support:customtabs:25.2.0'
-    compile 'com.google.firebase:firebase-core:10.0.1'
-    compile 'com.google.firebase:firebase-crash:10.0.1'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'com.android.support:support-v13:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:customtabs:25.3.1'
+    compile 'com.google.firebase:firebase-core:11.2.0'
+    compile 'com.google.firebase:firebase-crash:11.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
