--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "com.jacobgb24.launchschedule"
         minSdkVersion 16
-        targetSdkVersion 27
-        versionCode 23
-        versionName "3.3.3"
+        targetSdkVersion 30
+        versionCode 24
+        versionName "3.3.4"
     }
     buildTypes {
         release {
@@ -21,12 +21,13 @@ android {
 
 dependencies {
     implementation 'com.github.bumptech.glide:glide:3.8.0'
-    implementation 'com.android.support:support-v13:27.1.1'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:customtabs:27.1.1'
-    implementation 'com.google.firebase:firebase-core:16.0.1'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.browser:browser:1.3.0'
+    implementation 'com.google.firebase:firebase-core:19.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.1'
 }
+
 apply plugin: 'com.google.gms.google-services'
