--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jacobgb24.launchschedule"
     android:versionCode="1"
     android:versionName="@string/app_version">
 
@@ -16,7 +15,7 @@
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
-            android:label="@string/app_name" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
